<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">

    <string name="app_name">开眼</string>

    <string name="home_bottom_1">首页</string>
    <string name="home_bottom_2">发现</string>
    <string name="home_bottom_3">热门</string>
    <string name="home_bottom_4">我的</string>
    <string name="discover">Discover</string>
    <string name="ranking">Ranking</string>
    <string name="splash_intro_en">Daily appetizers for your eyes. Bon eyepetizer.</string>
    <string name="splash_intro_cn">每日精选视频推介，让你大开眼界。</string>
    <string name="video_cache">缓存</string>
    <string name="video_related">相关推荐</string>
    <string name="mine_setting">设置</string>
    <string name="mine_login">点击登录即可发表评论</string>
    <string name="mine_favorite">收藏</string>
    <string name="mine_comment">评论</string>
    <string name="mine_cache">我的缓存</string>
    <string name="mine_watch">观看记录</string>
    <string name="mine_feedback">意见反馈</string>
    <string name="cache_no">暂无内容</string>
    <string name="cache_start">缓存开始</string>
    <string name="cache_fail">缓存失败</string>
    <string name="cache_complete">缓存完成</string>
    <string name="cache_ing">缓存中&#8230;</string>
    <string name="watch_no">暂无内容</string>
    <string name="follow">＋关注</string>
    <string name="discover_follow">%1$s 人关注</string>
    <string name="discover_join">%1$s 人参与</string>
    <string name="discover_release">发布: %1$s</string>
    <string name="no_net">当前找不到网络</string>
    <string name="tips_not_wifi">您当前正在使用移动网络，继续播放将消耗流量</string>
    <string name="tips_not_wifi_cancel">停止播放</string>
    <string name="tips_not_wifi_confirm">继续播放</string>
    <string name="more">更多</string>
    <string name="search_hint">帮你找到感兴趣的视频</string>
    <string name="search_tip">输入标题或描述中的关键词找到更多视频</string>
    <string name="search_hot">— 热门搜索词 —</string>
    <string name="delete">删除</string>
    <string name="delete_tip">是否删除缓存？</string>
    <string name="yes">确定</string>
    <string name="no">取消</string>
    <string name="login">登录</string>
    <string name="login_find_password">找回密码</string>
    <string name="login_hint_user">请输入手机号/邮箱地址</string>
    <string name="login_hint_password">请输入密码</string>
    <string name="login_register">用户注册</string>
    <string name="login_author">作者登录</string>
    <string name="login_desc">登录后即可关注作者、\n发表评论、同步收藏视频和播放记录</string>
    <string name="login_protocol">登录或注册即可同意开眼 用户服务协议</string>

</resources>