<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/layout_top"
        layout="@layout/layout_top" />

    <FrameLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/rg_bottom"
        app:layout_constraintTop_toBottomOf="@id/layout_top"
        tools:background="@color/black" />

    <View
        android:id="@+id/v_line_bottom"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/color_line"
        app:layout_constraintBottom_toTopOf="@id/rg_bottom" />

    <RadioGroup
        android:id="@+id/rg_bottom"
        android:layout_width="match_parent"
        android:layout_height="@dimen/x40"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent">

        <RadioButton
            android:id="@+id/rb_home"
            android:layout_width="0dp"
            android:layout_height="@dimen/x34"
            android:layout_weight="1"
            android:button="@null"
            android:drawableTop="@drawable/home_bg_selected"
            android:gravity="center"
            android:text="@string/home_bottom_1"
            android:textColor="@color/color_gray_black"
            android:textSize="@dimen/x10" />

        <RadioButton
            android:id="@+id/rb_discover"
            android:layout_width="0dp"
            android:layout_height="@dimen/x34"
            android:layout_weight="1"
            android:button="@null"
            android:drawableTop="@drawable/find_bg_selected"
            android:gravity="center"
            android:text="@string/home_bottom_2"
            android:textColor="@color/color_gray_black"
            android:textSize="@dimen/x10" />

        <RadioButton
            android:id="@+id/rb_ranking"
            android:layout_width="0dp"
            android:layout_height="@dimen/x34"
            android:layout_weight="1"
            android:button="@null"
            android:drawableTop="@drawable/hot_bg_selected"
            android:gravity="center"
            android:text="@string/home_bottom_3"
            android:textColor="@color/color_gray_black"
            android:textSize="@dimen/x10" />

        <RadioButton
            android:id="@+id/rb_mine"
            android:layout_width="0dp"
            android:layout_height="@dimen/x34"
            android:layout_weight="1"
            android:button="@null"
            android:drawableTop="@drawable/mine_bg_selected"
            android:gravity="center"
            android:text="@string/home_bottom_4"
            android:textColor="@color/color_gray_black"
            android:textSize="@dimen/x10" />
    </RadioGroup>

</android.support.constraint.ConstraintLayout>