<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/bg_login" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_top"
        android:layout_width="@dimen/x40"
        android:layout_height="@dimen/x40"
        android:foreground="?attr/selectableItemBackground"
        android:padding="@dimen/x10"
        android:scaleType="fitXY"
        android:src="@drawable/ic_close_white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UnusedAttribute" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_top"
        style="@style/TextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/x10"
        android:text="@string/login_find_password"
        android:textColor="@color/white"
        android:textSize="@dimen/x12"
        app:layout_constraintBottom_toBottomOf="@id/iv_top"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/iv_top" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_logo"
        android:layout_width="@dimen/x150"
        android:layout_height="@dimen/x56"
        android:background="@drawable/img_logo_white"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_top" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_logo"
        style="@style/TextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/x10"
        android:maxLines="3"
        android:text="@string/login_desc"
        android:textColor="@color/white"
        android:textSize="@dimen/x12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_logo" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/et_user"
        style="@style/TextStyle"
        android:layout_width="@dimen/x200"
        android:layout_height="@dimen/x40"
        android:layout_marginTop="@dimen/x90"
        android:gravity="center_vertical"
        android:hint="@string/login_hint_user"
        android:imeOptions="actionNext"
        android:inputType="text"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="@dimen/x12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_logo" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/et_password"
        style="@style/TextStyle"
        android:layout_width="@dimen/x200"
        android:layout_height="@dimen/x40"
        android:gravity="center_vertical"
        android:hint="@string/login_hint_password"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="@dimen/x12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_user" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn"
        style="@style/TextStyle"
        android:layout_width="@dimen/x200"
        android:layout_height="@dimen/x40"
        android:layout_marginTop="@dimen/x15"
        android:alpha="0.8"
        android:text="@string/login"
        android:textColor="@color/app_gray"
        android:textSize="@dimen/x14"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_password" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_register"
        style="@style/TextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/x15"
        android:layout_marginEnd="@dimen/x20"
        android:text="@string/login_register"
        android:textColor="@color/white"
        android:textSize="@dimen/x12"
        app:layout_constraintEnd_toStartOf="@id/tv_author"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_author"
        style="@style/TextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_author"
        android:textColor="@color/white"
        android:textSize="@dimen/x12"
        app:layout_constraintBottom_toBottomOf="@id/tv_register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_register"
        app:layout_constraintTop_toTopOf="@id/tv_register" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_wb"
        android:layout_width="@dimen/x40"
        android:layout_height="@dimen/x40"
        android:layout_marginBottom="@dimen/x60"
        android:background="@drawable/shape_login"
        android:padding="@dimen/x8"
        android:scaleType="fitXY"
        android:src="@drawable/ic_login_wb"
        app:layout_constraintBottom_toTopOf="@id/tv_bottom"
        app:layout_constraintEnd_toStartOf="@id/iv_wx"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_wx"
        android:layout_width="@dimen/x40"
        android:layout_height="@dimen/x40"
        android:layout_marginStart="@dimen/x30"
        android:layout_marginEnd="@dimen/x30"
        android:background="@drawable/shape_login"
        android:padding="@dimen/x8"
        android:scaleType="fitXY"
        android:src="@drawable/ic_login_wx"
        app:layout_constraintBottom_toBottomOf="@id/iv_wb"
        app:layout_constraintEnd_toStartOf="@id/iv_qq"
        app:layout_constraintStart_toEndOf="@id/iv_wb"
        app:layout_constraintTop_toTopOf="@id/iv_wb" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_qq"
        android:layout_width="@dimen/x40"
        android:layout_height="@dimen/x40"
        android:background="@drawable/shape_login"
        android:padding="@dimen/x8"
        android:scaleType="fitXY"
        android:src="@drawable/ic_login_qq"
        app:layout_constraintBottom_toBottomOf="@id/iv_wb"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/iv_wx"
        app:layout_constraintTop_toTopOf="@id/iv_wb" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_bottom"
        style="@style/TextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/x20"
        android:text="@string/login_protocol"
        android:textColor="@color/app_gray"
        android:textSize="@dimen/x12"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>