<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/iv_avatar"
            android:layout_width="@dimen/x85"
            android:layout_height="@dimen/x85"
            android:layout_marginTop="@dimen/x10"
            android:alpha="0.5"
            android:background="@drawable/landing_countdown_background"
            android:padding="@dimen/x12"
            android:scaleType="fitXY"
            android:src="@drawable/ic_launcher"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tv_login"
            style="@style/TextStyle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/x20"
            android:layout_marginTop="@dimen/x20"
            android:maxLines="2"
            android:text="@string/mine_login"
            android:textColor="@color/gray"
            android:textSize="@dimen/x12"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_avatar" />

        <LinearLayout
            android:id="@+id/ll_favorite"
            android:layout_width="0dp"
            android:layout_height="@dimen/x30"
            android:layout_marginTop="@dimen/x15"
            android:foreground="?attr/selectableItemBackground"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toStartOf="@id/ll_comment"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_login"
            tools:ignore="UnusedAttribute">

            <android.support.v7.widget.AppCompatImageView
                android:layout_width="@dimen/x15"
                android:layout_height="@dimen/x15"
                android:scaleType="fitXY"
                android:src="@drawable/ic_favorite_normal" />

            <android.support.v7.widget.AppCompatTextView
                style="@style/TextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/x5"
                android:maxWidth="@dimen/x100"
                android:text="@string/mine_favorite"
                android:textColor="@color/gray"
                android:textSize="@dimen/x12" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_comment"
            android:layout_width="0dp"
            android:layout_height="@dimen/x30"
            android:foreground="?attr/selectableItemBackground"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="@id/ll_favorite"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toEndOf="@id/ll_favorite"
            app:layout_constraintTop_toTopOf="@id/ll_favorite"
            tools:ignore="UnusedAttribute">

            <android.support.v7.widget.AppCompatImageView
                android:layout_width="@dimen/x15"
                android:layout_height="@dimen/x15"
                android:scaleType="fitXY"
                android:src="@drawable/ic_comment_normal" />

            <android.support.v7.widget.AppCompatTextView
                style="@style/TextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/x5"
                android:maxWidth="@dimen/x100"
                android:text="@string/mine_comment"
                android:textColor="@color/gray"
                android:textSize="@dimen/x12" />
        </LinearLayout>

        <View
            android:id="@+id/v_line_1"
            android:layout_width="@dimen/x1"
            android:layout_height="@dimen/x20"
            android:background="@color/gray"
            app:layout_constraintBottom_toBottomOf="@id/ll_favorite"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/ll_favorite" />

        <View
            android:id="@+id/v_line_2"
            android:layout_width="match_parent"
            android:layout_height="@dimen/x1"
            android:layout_marginTop="@dimen/x5"
            android:background="@color/gray"
            app:layout_constraintTop_toBottomOf="@id/ll_favorite" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tv_cache"
            style="@style/TextStyle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/x50"
            android:layout_marginTop="@dimen/x40"
            android:foreground="?attr/selectableItemBackground"
            android:paddingStart="@dimen/x2"
            android:paddingEnd="@dimen/x2"
            android:text="@string/mine_cache"
            android:textColor="@color/gray"
            android:textSize="@dimen/x12"
            app:layout_constraintTop_toBottomOf="@id/v_line_2"
            tools:ignore="UnusedAttribute" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tv_watch"
            style="@style/TextStyle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/x50"
            android:foreground="?attr/selectableItemBackground"
            android:paddingStart="@dimen/x2"
            android:paddingEnd="@dimen/x2"
            android:text="@string/mine_watch"
            android:textColor="@color/gray"
            android:textSize="@dimen/x12"
            app:layout_constraintTop_toBottomOf="@id/tv_cache"
            tools:ignore="UnusedAttribute" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tv_feedback"
            style="@style/TextStyle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/x50"
            android:foreground="?attr/selectableItemBackground"
            android:paddingStart="@dimen/x2"
            android:paddingEnd="@dimen/x2"
            android:text="@string/mine_feedback"
            android:textColor="@color/gray"
            android:textSize="@dimen/x12"
            app:layout_constraintTop_toBottomOf="@id/tv_watch"
            tools:ignore="UnusedAttribute" />
    </android.support.constraint.ConstraintLayout>

</ScrollView>