<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shape_search">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tb"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/white"
        android:elevation="4dp"
        app:contentInsetStart="0dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UnusedAttribute">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_back"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:padding="10dp"
                android:scaleType="fitXY"
                android:src="@drawable/ic_back_gray"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="UnusedAttribute" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et"
                style="@style/TextStyle"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:background="@null"
                android:gravity="center_vertical"
                android:hint="@string/search_hint"
                android:imeOptions="actionSearch"
                android:inputType="text"
                android:textColor="@color/app_gray"
                android:textCursorDrawable="@drawable/shape_cursor_pink"
                android:textSize="12dp"
                app:layout_constraintEnd_toStartOf="@id/iv_search"
                app:layout_constraintStart_toEndOf="@id/iv_back"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_search"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:padding="10dp"
                android:scaleType="fitXY"
                android:src="@drawable/ic_search_gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="UnusedAttribute" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/tv_tip"
        style="@style/TextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/search_tip"
        android:textColor="@color/app_gray"
        android:textSize="10dp"
        app:layout_constraintTop_toBottomOf="@id/tb" />

    <TextView
        android:id="@+id/tv_hot"
        style="@style/TextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/search_hot"
        android:textColor="@color/app_black"
        android:textSize="10dp"
        app:layout_constraintTop_toBottomOf="@id/tv_tip" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:clipToPadding="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_hot" />

</androidx.constraintlayout.widget.ConstraintLayout>